1999-05-27  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* fold-const.c (fold_truthop): Make the field reference unsigned
	when converting a single bit compare.

Thu May 27 03:07:13 1999  Philip Blundell  <pb@nexus.co.uk>

	Based on patch by Scott Bambrough and Pat Beirne:
	* config/arm/arm.c (making_const_table): New variable.
	* config/arm/arm.h (making_const_table): Declare.
	(OUTPUT_INT_ADDR_CONST): Mark symbols as position independent if
	appropriate.
	* config/arm/arm.md (consttable_4, consttable_8, consttable_end):
	Keep track of when we are building the constant table.	

Thu May 27 02:52:55 1999  Jeffrey A Law  (law@cygnus.com)

	* varasm.c (STRIP_NAME_ENCODING): Remove default definition.
	* output.h (STRIP_NAME_ENCODING): Strip '*' like the old varasm
	version did.

Thu May 27 02:40:48 1999  J"orn Rennecke <amylaar@cygnus.co.uk>

	* loop.c (strength_reduce): Don't do biv->giv conversion on constants.

Thu May 27 02:09:27 1999  Jeffrey A Law  (law@cygnus.com)

	* reload.c (push_reload): Do not call remove_address_replacements
	when presented with identical optional reloads.

Wed May 26 14:18:05 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.h (MASK_FIX, TARGET_FIX): New.
	(MASK_*): Reorganize constants.
	(CPP_AM_FIX_SPEC): New.
	(TARGET_SWITCHES): Add FIX.
	(EXTRA_SPECS): Likewise.
	(CPP_CPU_EV6_SPEC): Use FIX, not CIX.
	(SECONDARY_MEMORY_NEEDED): Likewise.
	(REGISTER_MOVE_COST): Likewise.
	* alpha.c (override_options): Add FIX support.  Always use 
	ALPHA_TP_PROG for ev6.
	* alpha.md (sqrt and mov[sd]i patterns): Use FIX, not CIX.
	* alpha/elf.h (ASM_FILE_START): Look at FIX too.
	* configure.in (target_cpu_default2) [ev6]: Use FIX, not CIX.

Wed May 26 09:53:05 1999  Mark Mitchell  <mark@codesourcery.com>

        * fold-const.c (fold): STRIP_NOPS when deciding whether or not
	something is a candidate for optimize_bit_field_compare.

Wed May 26 03:54:33 1999  Melissa O'Neill <oneill@cs.sfu.ca>
